--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         how to open the console in your browser 
         <a href="https://balsamiq.com/support/faqs/browserconsole/">here</a>.
     </p>
+    <p>A game consists of five rounds. To start a new game, type <em>playGame()</em> in the console.</p>
     
     <script src="./script.js"></script>
 </body>
