Add buttons to record human choice

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <p>This is a game that you can play via the console. You can check 
-        how to open the console in your browser 
-        <a href="https://balsamiq.com/support/faqs/browserconsole/">here</a>.
-    </p>
-    <p>A game consists of five rounds. To start a new game, type <em>playGame()</em> in the console.</p>
+
+    <button id="rck-btn">Rock</button>
+    <button id="ppr-btn">Paper</button>
+    <button id="sciss-btn">Scissors</button>
     
     <script src="./script.js"></script>
 </body>
