Results are displayed on page now

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <button id="rck-btn">Rock</button>
     <button id="ppr-btn">Paper</button>
     <button id="sciss-btn">Scissors</button>
+
+    <div id="results"></div>
     
     <script src="./script.js"></script>
 </body>
